# Security

./: .dockerignore  .editorconfig  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  NOTICE  README.md  RuThan-AdminConsole.README.md  RuThan-AdminConsole.html  SECURITY.md  docker-compose.yml  pyproject.toml  pytest.ini  render.yaml
backend/: Dockerfile  requirements.txt
dashboard/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js
data/: generic_phish_holdout.csv  generic_phishing_seed.csv  thai_gov_domains.csv  thai_phish_holdout.csv  thai_phishing_seed.csv
extension/: PRIVACY.md  README.md  api.js  background.js  badge.js  manifest.json  options.css  options.html  options.js  popup.css  popup.html  popup.js  storage.js  warning.css  warning.html  warning.js
graphify-out/: .graphify_ast.json  .graphify_chunk_01.json  .graphify_chunk_02.json  .graphify_detect.json  .graphify_labels.json  .graphify_root  .graphify_uncached.txt  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
ml_pipeline/: __init__.py  build_whitelist.py  collect_dataset.py  config.py  evaluate.py  feature_engineering.py  feedback_retrain.py  requirements.txt  synthetic_generator.py  train.py  tune_threshold.py
models/: features.json  scaler.pkl  whitelist.json
phish_features/: __init__.py  domain.py  extractor.py  homoglyph.py  lexical.py  rules.py  schema.py  tls.py  whitelist.py
reports/: evaluation_summary.json  metrics.json  missed_generic_urls.csv  missed_thai_urls.csv  real_holdout_metrics.json  (+2 more)
(+128 files in other folders)
