[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "phish-features"
version = "1.0.0"
description = "Shared feature-extraction contract for the Thai Phishing URL Detection system"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "Levenshtein>=0.25",
    "python-whois>=0.9.4",
]

[project.optional-dependencies]
ml = [
    "pandas>=2.1",
    "numpy>=1.26",
    "scikit-learn>=1.4",
    "xgboost>=2.0",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "joblib>=1.3",
    "requests>=2.31",
]

[tool.setuptools]
packages = ["phish_features"]
